<resources>
    <string name="app_name">multus calendrius</string>
    <string name="inscrire">S\'inscrire</string>
    <string name="deja_inscrit_se_connecter">Déjà inscrit ? Se connecter</string>
    <string name="confirmer_le_mot_de_passe">Confirmer le mot de passe</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="adresse_courriel">Adresse courriel</string>
    <string name="se_connecter">Se connecter</string>
    <string name="dates_limites">Dates limites :</string>
    <string name="hint_photo_de_profil">Photo de profil</string>
    <string name="hint_menu">MENU</string>
    <string name="hint_logo">LOGO</string>
    <string name="rv_heures">Heures</string>
    <string name="rv_dates_limites">Dates Limites</string>
    <string name="rv_dates">Dates</string>
    <string name="aller_au_plannificateur">Aller au plannificateur</string>
    <string name="menu_de_creation">Menu de création</string>
    <string name="liste_des_calendriers_partages">Liste des calendriers partagés :</string>
    <string name="liste_des_calendriers">Liste des calendriers :</string>
    <string name="liste_des_calendriers_personnels">Liste des calendriers personnels :</string>
    <string name="planificateur">Planificateur</string>
    <string name="menu">Menu</string>
    <string name="calendrier">Calendrier</string>
    <string name="creer">Créer</string>
    <string name="filtre">Filtre</string>
    <string name="aller_au_calendrier">Aller au calendrier</string>
    <string name="aller_au_planificateur">Aller au planificateur</string>
    <string name="partager_le_calendrier">Partager le calendrier</string>
    <string name="menu_du_calendrier">Menu du calendrier</string>
    <string name="filtrer_les_elements">Filtrer les éléments</string>
    <string name="menu_des_calendriers">Menu des calendriers</string>
    <string name="bouton_de_creation">Bouton de création</string>
    <string name="connectez_vous">Connectez-vous !</string>
    <string name="nom_utilisateur">Nom d\'utilisateur</string>
    <string name="inscrivez_vous">Inscrivez-vous !</string>
    <string name="profil">Profil</string>
    <string name="description">Description</string>
    <string name="nom">Nom</string>
    <string name="creez_un_nouveau_calendrier">Créez un nouveau calendrier !</string>
    <string name="annuler">Annuler</string>
    <string name="creez_un_nouvel_evenement">Créez un nouvel événement !</string>
    <string name="creez_un_nouvel_element">Créez un nouvel élément !</string>
    <string name="choisir_une_date">Choisir une date :</string>
    <string name="choisir_une_date_heure_de_fin">Choisir une date/heure de fin :</string>
    <string name="creer_une_date_limite">Créer une date limite :</string>
    <string name="choisir_une_date_heure_de_debut">Choisir une date heure de début</string>
    <string name="choisissez_la_couleur_de_evenement">Choisissez la couleur de l\'événement : </string>
    <string name="associer_un_evenement">Associer un événement (optionnel) :</string>
    <string name="charger">Charger</string>
    <string name="partager">Partager</string>
    <string name="modifier">Modifier</string>
    <string name="supprimer">Supprimer</string>
    <string name="votre_profil">Votre profil !</string>
    <string name="se_deconnecter">Se déconnecter</string>
    <string name="modifiez_votre_calendrier">Modifiez votre calendrier !</string>
    <string name="modifiez_votre_evenement">Modifiez votre événement !</string>
    <string name="modifiez_votre_element">Modifiez votre élément !</string>
    <string name="voir_periodes">Voir périodes</string>
    <string name="voir_dates_limites">Voir dates limites</string>
    <string name="aucun_evenement">Aucun événement</string>
</resources>