<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1.6"
        android:paddingTop="10dp"
        android:paddingHorizontal="15dp">


        <ImageButton
            android:id="@+id/imgBtnMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background=""
            android:contentDescription="@string/hint_menu"
            android:scaleType="fitStart"
            app:srcCompat="@android:drawable/ic_menu_more"
            tools:ignore="NestedWeights,ImageContrastCheck" />

        <ImageButton
            android:id="@+id/imgBtnLogo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background=""
            android:contentDescription="@string/hint_logo"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_launcher_foreground"
            tools:ignore="ImageContrastCheck" />

        <ImageButton
            android:id="@+id/imgBtnPhotoProfil"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/hint_photo_de_profil"
            android:layout_weight="1"
            android:background=""
            android:scaleType="fitEnd"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvDates"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.6"
        android:contentDescription="@string/rv_dates"
        android:orientation="horizontal"
        android:layout_marginHorizontal="15dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvHeures"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:contentDescription="@string/rv_heures"
        android:layout_marginHorizontal="35dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.1"
        android:orientation="vertical"
        android:background="@color/design_default_color_secondary"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:text="@string/dates_limites"
            android:textSize="16sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvDatesLimites"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/rv_dates_limites" />

    </LinearLayout>

</LinearLayout>