<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="@drawable/rounded_rectangle"
    android:divider="@android:color/transparent"
    android:dividerHeight="8dp">

    <CheckBox
        android:id="@+id/cbPeriodes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/voir_periodes"
        android:textSize="16sp"
        android:textColor="@color/couleur_texte"
        android:layoutDirection="rtl"/>

    <CheckBox
        android:id="@+id/cbDeadlines"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/voir_dates_limites"
        android:textSize="16sp"
        android:textColor="@color/couleur_texte"
        android:layoutDirection="rtl"/>

    <Button
        android:id="@+id/btnCharger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/charger"
        android:textColor="@color/couleur_primaire"
        android:backgroundTint="@color/couleur_bouton"/>

</LinearLayout>