<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="24dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:textColor="@color/couleur_texte"
        android:text="@string/creez_un_nouveau_calendrier"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:hint="@string/nom"
        app:boxBackgroundColor="@color/couleur_primaire"
        app:hintTextColor="@color/couleur_texte"
        android:textColorHint="@color/couleur_texte"
        app:boxStrokeColor="@color/couleur_texte">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textNom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/couleur_texte"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="12dp"
        android:hint="@string/description"
        app:boxBackgroundColor="@color/couleur_primaire"
        app:hintTextColor="@color/couleur_texte"
        android:textColorHint="@color/couleur_texte"
        app:boxStrokeColor="@color/couleur_texte">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:inputType="textMultiLine"
            android:textColor="@color/couleur_texte"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnCreer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/creer"
        android:minHeight="48dp"
        android:textSize="20sp"
        android:textColor="@color/couleur_primaire"
        android:backgroundTint="@color/couleur_bouton" />

    <Button
        android:id="@+id/btnAnnuler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/annuler"
        android:minHeight="48dp"
        android:textSize="20sp"
        android:textColor="@color/couleur_primaire"
        android:backgroundTint="@color/couleur_bouton" />

</LinearLayout>