<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:background="@color/couleur_background">

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="invisible"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/textCreerCalendrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/votre_profil"
            android:textColor="@color/couleur_texte"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imgBtnDeco"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/imgBtnDeco"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            android:importantForAccessibility="no"
            android:src="@drawable/deco_icon"
            android:layout_margin="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:hint="@string/nom_utilisateur"
        app:boxBackgroundColor="@color/couleur_primaire"
        app:hintTextColor="@color/couleur_texte"
        android:textColorHint="@color/couleur_texte"
        app:boxStrokeColor="@color/couleur_texte">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/couleur_texte"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:hint="@string/adresse_courriel"
        app:boxBackgroundColor="@color/couleur_primaire"
        app:hintTextColor="@color/couleur_texte"
        android:textColorHint="@color/couleur_texte"
        app:boxStrokeColor="@color/couleur_texte">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/couleur_texte"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:hint="@string/mot_de_passe"
        app:boxBackgroundColor="@color/couleur_primaire"
        app:hintTextColor="@color/couleur_texte"
        android:textColorHint="@color/couleur_texte"
        app:boxStrokeColor="@color/couleur_texte"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/couleur_texte"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/btnModifier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modifier"
        android:minHeight="48dp"
        android:textSize="20sp"
        android:textColor="@color/couleur_primaire"
        android:backgroundTint="@color/couleur_bouton" />

    <Button
        android:id="@+id/btnAnnuler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/annuler"
        android:minHeight="48dp"
        android:textSize="20sp"
        android:textColor="@color/couleur_primaire"
        android:backgroundTint="@color/couleur_bouton" />

</LinearLayout>
